# serenity

Userland/Applications/: CMakeLists.txt
Userland/Applications/HardwareManager/: CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h  DevicePropertiesWindow.gml  HardwareListModel.cpp  HardwareListModel.h  PropertiesWindow.cpp  PropertiesWindow.h  main.cpp
